k8s/production/custom/pipeline-status/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pipeline-status
  namespace: custom
  labels:
    app: pipeline-status
    svc: web
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 80
      targetPort: 8080
  selector:
    app: pipeline-status
    svc: web
